templates/k8s-deploy/skeleton/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: __NAMESPACE__
  labels:
    app.kubernetes.io/part-of: __PROJECT_NAME__
