templates/k8s-deploy/skeleton/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: __PROJECT_NAME__
  namespace: __NAMESPACE__
  labels:
    app.kubernetes.io/name: __PROJECT_NAME__
    app.kubernetes.io/part-of: __PROJECT_NAME__
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: __PROJECT_NAME__
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
